load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load(
    "@io_bazel_rules_go//proto:compiler.bzl",
    "go_proto_compiler",
)
load(
    "@io_bazel_rules_go//proto/wkt:well_known_types.bzl",
    "gen_well_known_types",
)
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/prysmaticlabs/protoc-gen-go-cast
gazelle(name = "gazelle")

go_proto_compiler(
    name = "go_cast",
    options = [
        "plugins=grpc",
    ],
    plugin = ":protoc-gen-go-cast",
    visibility = ["//visibility:public"],
    deps = gen_well_known_types(),
)

go_library(
    name = "go_default_library",
    srcs = [
        "cast.go",
        "main.go",
    ],
    importpath = "github.com/prysmaticlabs/protoc-gen-go-cast",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_iancoleman_strcase//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@org_golang_google_protobuf//cmd/protoc-gen-go/internal_gengo:go_default_library",
        "@org_golang_google_protobuf//compiler/protogen:go_default_library",
        "@org_golang_x_tools//go/ast/astutil:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-go-cast",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "test_go_proto",
    importpath = "github.com/prysmaticlabs/protoc-gen-go-cast/test",
    proto = ":test_proto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["cast_test.go"],
    embed = [":go_default_library"],
)
